Added a warning confirmation section that forces the user to confirm the warnings before continuing a process if the requireWarningConfirmation payload parameter is defined
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43742

--- a/BusinessProcess/Code/Vanrise.BusinessProcess.Entities/Vanrise.BusinessProcess.Entities.csproj
+++ b/BusinessProcess/Code/Vanrise.BusinessProcess.Entities/Vanrise.BusinessProcess.Entities.csproj
@@ -93,6 +93,7 @@
     <Compile Include="BusinessRules\BPBusinessRuleSetDetail.cs" />
     <Compile Include="BusinessRules\BPBusinessRuleSetInfoFilter.cs" />
     <Compile Include="BusinessRules\BPBusinessRuleSetQuery.cs" />
+    <Compile Include="BusinessRules\BPValidationMessageBigResult.cs" />
     <Compile Include="BusinessRules\BPValidationMessageQuery.cs" />
     <Compile Include="BusinessRules\BPViolatedRule.cs" />
     <Compile Include="BusinessRules\BPValitaionMessageUpdateOutput.cs" />
