Creating ZoneRoutingProduct from numbering plan
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43744

--- a/TOneV2/Code/TOneV2/TOne.WhS.CodePreparation.Business/TOne.WhS.CodePreparation.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.CodePreparation.Business/TOne.WhS.CodePreparation.Business.csproj
@@ -120,6 +120,7 @@
     <Compile Include="SalePriceListsByOwner.cs" />
     <Compile Include="NumberingPlanHelper.cs" />
     <Compile Include="ZonePreviewManager.cs" />
+    <Compile Include="ZoneRoutingProductPreviewManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TOne.Entities\TOne.Entities.csproj">
