--- a/TOneV2/Code/TOneV2/TOne.WhS.CodePreparation.Data.SQL/TOne.WhS.CodePreparation.Data.SQL.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.CodePreparation.Data.SQL/TOne.WhS.CodePreparation.Data.SQL.csproj
@@ -72,11 +72,13 @@
     <Compile Include="NewSaleRateDataManager.cs" />
     <Compile Include="NewSaleCodeDataManager.cs" />
     <Compile Include="NewSaleZoneDataManager.cs" />
+    <Compile Include="NewSaleZoneRPDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SaleRatePreviewDataManager.cs" />
     <Compile Include="SaleCodePreviewDataManager.cs" />
     <Compile Include="SaleZonePreviewDataManager.cs" />
     <Compile Include="SaleCountryPreviewDataManager.cs" />
+    <Compile Include="SaleZoneRPPreviewDataManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TOne.Data.SQL\TOne.Data.SQL.csproj">
