--- a/TOneV2/Code/TOneV2/TOne.WhS.CodePreparation.Data/TOne.WhS.CodePreparation.Data.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.CodePreparation.Data/TOne.WhS.CodePreparation.Data.csproj
@@ -70,10 +70,12 @@
     <Compile Include="INewSaleRateDataManager.cs" />
     <Compile Include="INewSaleCodeDataManager.cs" />
     <Compile Include="INewSaleZoneDataManager.cs" />
+    <Compile Include="INewSaleZoneRPDataManager.cs" />
     <Compile Include="ISaleRatePreviewDataManager.cs" />
     <Compile Include="ISaleZonePreviewDataManager.cs" />
     <Compile Include="ISaleCodePreviewDataManager.cs" />
     <Compile Include="ISaleCountryPreviewDataManager.cs" />
+    <Compile Include="ISaleZoneRPPreviewDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
