--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/TOne.WhS.Sales.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/TOne.WhS.Sales.Web.csproj
@@ -188,9 +188,7 @@
     <Content Include="WhS_Sales\Directives\CodeCompare\Templates\CodeCompareGrid.html" />
     <Content Include="WhS_Sales\Directives\CodeCompare\vr-whs-sales-codecompare-grid.js" />
     <Content Include="WhS_Sales\Directives\Country\Templates\CountriesWithDefaultRatesGridTemplate.html" />
-    <Content Include="WhS_Sales\Directives\Country\Templates\SoldCountryGridTemplate.html" />
     <Content Include="WhS_Sales\Directives\Country\vr-whs-sales-countrieswithdefaultrate-grid.js" />
-    <Content Include="WhS_Sales\Directives\Country\vr-whs-sales-soldcountry-grid.js" />
     <Content Include="WhS_Sales\Directives\Extensions\BulkAction\ActionTypes\Templates\RateBulkActionTypeTemplate.html" />
     <Content Include="WhS_Sales\Directives\Extensions\BulkAction\ActionTypes\vr-whs-sales-bulkaction-type-bed.js" />
     <Content Include="WhS_Sales\Directives\Extensions\BulkAction\ActionTypes\vr-whs-sales-bulkaction-type-cancelpendingrates.js" />
@@ -315,8 +313,6 @@
     <Content Include="WhS_Sales\Services\RatePlanService.js" />
     <Content Include="WhS_Sales\Services\SellingRuleService.js" />
     <Content Include="WhS_Sales\Services\CountryWithDefaultRateService.js" />
-    <Content Include="WhS_Sales\Views\AddCountries.html" />
-    <Content Include="WhS_Sales\Views\AddCountriesController.js" />
     <Content Include="WhS_Sales\Views\BulkAction\BulkActionWizard.html" />
     <Content Include="WhS_Sales\Views\BulkAction\BulkActionWizardController.js" />
     <Content Include="WhS_Sales\Views\CodeComparison\CodeComparisonManagement.html" />
@@ -351,8 +347,8 @@
     <Content Include="WhS_Sales\Views\SellingRule\SellingRuleEditorController.js" />
     <Content Include="WhS_Sales\Views\SellingRule\SellingRuleManagement.html" />
     <Content Include="WhS_Sales\Views\SellingRule\SellingRuleManagementController.js" />
-    <Content Include="WhS_Sales\Views\SellNewCountries.html" />
-    <Content Include="WhS_Sales\Views\SellNewCountriesController.js" />
+    <Content Include="WhS_Sales\Views\ManageCountries.html" />
+    <Content Include="WhS_Sales\Views\ManageCountriesController.js" />
     <Content Include="WhS_Sales\Views\RatePlan.html" />
     <Content Include="WhS_Sales\Views\RatePlanController.js" />
     <Content Include="WhS_Sales\Views\SupplierTargetMatch\SupplierTargetMatch.html" />
