--- a/TOneV2/Code/TOneV2/TOne.WhS.DBSync.Entities/TOne.WhS.DBSync.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.DBSync.Entities/TOne.WhS.DBSync.Entities.csproj
@@ -77,6 +77,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CarrierProfileBlockedEntity.cs" />
     <Compile Include="Common\DatabaseScripts.cs" />
     <Compile Include="Common\DBForeignKey.cs" />
     <Compile Include="Common\DBTable.cs" />
