--- a/TOneV2/Code/TOneV2/TOne.WhS.SupplierPriceList.Entities/TOne.WhS.SupplierPriceList.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.SupplierPriceList.Entities/TOne.WhS.SupplierPriceList.Entities.csproj
@@ -88,6 +88,7 @@
     <Compile Include="SPL\ExistingRateGroupByZoneName.cs" />
     <Compile Include="SPL\ExistingRateGroup.cs" />
     <Compile Include="SPL\ExistingZoneService.cs" />
+    <Compile Include="SPL\ImportedData\AllImportedDataByZone.cs" />
     <Compile Include="SPL\ImportedData\ImportedDataByZone.cs" />
     <Compile Include="SPL\ImportedData\ImportedZoneServiceGroup.cs" />
     <Compile Include="SPL\ImportedData\ImportedZoneService.cs" />
