Divided the BED retroactive date rule into 4 rules
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43775

--- a/TOneV2/Code/TOneV2/TOne.WhS.SupplierPriceList.Business/TOne.WhS.SupplierPriceList.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.SupplierPriceList.Business/TOne.WhS.SupplierPriceList.Business.csproj
@@ -86,6 +86,9 @@
     <Compile Include="BusinessRules\Conditions\ValidateCodesRates\MissingZonesCondition.cs" />
     <Compile Include="BusinessRules\Conditions\ValidateImportedZones\ImportedRateIsGreaterThanMaximumRateCondition.cs" />
     <Compile Include="BusinessRules\Conditions\ValidateZones\BEDBeforeRetroActiveMinDateCondition.cs" />
+    <Compile Include="BusinessRules\Conditions\ValidateZones\CodeBEDLessThanRetroactiveDateCondition.cs" />
+    <Compile Include="BusinessRules\Conditions\ValidateZones\NormalRateBEDLessThanRetroactiveDateCondition.cs" />
+    <Compile Include="BusinessRules\Conditions\ValidateZones\OtherRateBEDLessThanRetroactiveDateCondition.cs" />
     <Compile Include="BusinessRules\Conditions\ValidateZones\RateGreaterThanZero.cs" />
     <Compile Include="BusinessRules\Conditions\ValidateZones\ZoneServicesWithDifferentBEDCondition.cs" />
     <Compile Include="BusinessRules\Conditions\ValidateZones\ZoneHasNoCodesCondition.cs" />
