Add release code description popup
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43785

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/TOne.WhS.BusinessEntity.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/TOne.WhS.BusinessEntity.Web.csproj
@@ -583,6 +583,8 @@
     <Content Include="WhS_BusinessEntity\Views\CodeGroup\CodeGroupUploadEditorController.js" />
     <Content Include="WhS_BusinessEntity\Views\FinancialAccount\FinancialAccountEditor.html" />
     <Content Include="WhS_BusinessEntity\Views\FinancialAccount\FinancialAccountEditorController.js" />
+    <Content Include="WhS_BusinessEntity\Views\ReleaseCodeDescription\ReleaseCodeDescriptionViewer.html" />
+    <Content Include="WhS_BusinessEntity\Views\ReleaseCodeDescription\ReleaseCodeDescriptionViewerController.js" />
     <Content Include="WhS_BusinessEntity\Views\RoutingProduct\RoutingProductEditor.html" />
     <Content Include="WhS_BusinessEntity\Views\RoutingProduct\RoutingProductEditorController.js" />
     <Content Include="WhS_BusinessEntity\Views\RoutingProduct\RoutingProductManagement.html" />
