--- a/Retail/Code/Retail.MultiNet.Business/Retail.MultiNet.Business.csproj
+++ b/Retail/Code/Retail.MultiNet.Business/Retail.MultiNet.Business.csproj
@@ -129,6 +129,7 @@
     <Compile Include="Convertors\PaymentConvertor.cs" />
     <Compile Include="Convertors\MigrationConvertors\SubscriberConvertor.cs" />
     <Compile Include="Convertors\MigrationConvertors\UserConvertor.cs" />
+    <Compile Include="ExcludeCDRsInvoiceSettingPart.cs" />
     <Compile Include="ExtendedInfo\MultiNetBranchExtendedInfo.cs" />
     <Compile Include="ExtendedInfo\MultiNetBranchExtendedInfoDefinition.cs" />
     <Compile Include="ExtendedInfo\MultiNetCompanyExtendedInfo.cs" />
