added DataSourceID and BatchDescription to QueueItem
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43801

--- a/BusinessProcess/Code/Vanrise.Queueing/Vanrise.Queueing.csproj
+++ b/BusinessProcess/Code/Vanrise.Queueing/Vanrise.Queueing.csproj
@@ -57,6 +57,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.Entities.dll</HintPath>
     </Reference>
+    <Reference Include="Vanrise.Integration.Entities">
+      <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.Integration.Entities.dll</HintPath>
+    </Reference>
     <Reference Include="Vanrise.Runtime">
       <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.Runtime.dll</HintPath>
     </Reference>
