added DataSourceID and BatchDescription to QueueItem
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43802

--- a/Vanrise/Code/Vanrise.Integration.Entities/Vanrise.Integration.Entities.csproj
+++ b/Vanrise/Code/Vanrise.Integration.Entities/Vanrise.Integration.Entities.csproj
@@ -46,6 +46,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BusinessManagers\BEManagerFactory.cs" />
+    <Compile Include="BusinessManagers\IBEManager.cs" />
     <Compile Include="Receive\BaseAdapterArgument.cs" />
     <Compile Include="Receive\BaseAdapterState.cs" />
     <Compile Include="Receive\BaseReceiveAdapter.cs" />
