Adding upload Switch Release Cause files
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43809

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/TOne.WhS.BusinessEntity.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/TOne.WhS.BusinessEntity.Web.csproj
@@ -650,6 +650,8 @@
     <Content Include="WhS_BusinessEntity\Views\SwitchReleaseCause\SwitchReleaseCauseEditorController.js" />
     <Content Include="WhS_BusinessEntity\Views\SwitchReleaseCause\SwitchReleaseCauseManagement.html" />
     <Content Include="WhS_BusinessEntity\Views\SwitchReleaseCause\SwitchReleaseCauseManagementController.js" />
+    <Content Include="WhS_BusinessEntity\Views\SwitchReleaseCause\UploadSwitchReleaseCauseEditor.html" />
+    <Content Include="WhS_BusinessEntity\Views\SwitchReleaseCause\UploadSwitchReleaseCauseEditorController.js" />
     <Content Include="WhS_BusinessEntity\Views\Switch\SingleSwitchManagement.html" />
     <Content Include="WhS_BusinessEntity\Views\Switch\SwitchEditor.html" />
     <Content Include="WhS_BusinessEntity\Views\Switch\SingleSwitchManagementController.js" />
