Writing to workflow logs from save pricelist manager in both rate plan and numbering plan
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43838

--- a/TOneV2/Code/TOneV2/TOne.WhS.CodePreparation.BP.Activities/TOne.WhS.CodePreparation.BP.Activities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.CodePreparation.BP.Activities/TOne.WhS.CodePreparation.BP.Activities.csproj
@@ -103,6 +103,7 @@
     <Compile Include="BackupData.cs" />
     <Compile Include="GenerateZonesRPsPreview.cs" />
     <Compile Include="LogCustomersToNotify.cs" />
+    <Compile Include="NotificationContext.cs" />
     <Compile Include="PrepareChangedCustomerCountriesForApply.cs" />
     <Compile Include="PrepareExistingEffectiveRates.cs" />
     <Compile Include="PrepareNewZonesRPForApply.cs" />
