Implementation of Switch Release Cause Uploader
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43849

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Entities/TOne.WhS.BusinessEntity.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Entities/TOne.WhS.BusinessEntity.Entities.csproj
@@ -179,6 +179,7 @@
     <Compile Include="SwitchReleaseCause\SwitchReleaseCauseDetail.cs" />
     <Compile Include="SwitchReleaseCause\SwitchReleaseCauseInfo.cs" />
     <Compile Include="SwitchReleaseCause\SwitchReleaseCauseQuery.cs" />
+    <Compile Include="SwitchReleaseCause\UploadSwitchReleaseCauseLog.cs" />
     <Compile Include="Switch\InsertSwitchOperationOutput.cs" />
     <Compile Include="Switch\UpdateSwitchOperationOutput.cs" />
     <Compile Include="ZoneRoutingProduct\History\SaleEntityZoneRoutingProductHistoryQuery.cs" />
