Invoice Generation Process
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43851

--- a/Vanrise/Code/Vanrise.Invoice.BP.Activities/Vanrise.Invoice.BP.Activities.csproj
+++ b/Vanrise/Code/Vanrise.Invoice.BP.Activities/Vanrise.Invoice.BP.Activities.csproj
@@ -57,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GeneratePartnersInvoices.cs" />
+    <Compile Include="LoadInvoiceGenerationDrafts.cs" />
     <Compile Include="LoadAllPartnerIds.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
