--- a/Vanrise/Code/Vanrise.Invoice.Business/Vanrise.Invoice.Business.csproj
+++ b/Vanrise/Code/Vanrise.Invoice.Business/Vanrise.Invoice.Business.csproj
@@ -41,6 +41,14 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="Vanrise.BusinessProcess.Business, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\BusinessProcess\Code\Output\Vanrise.BusinessProcess.Business.dll</HintPath>
+    </Reference>
+    <Reference Include="Vanrise.BusinessProcess.Entities, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\BusinessProcess\Code\Output\Vanrise.BusinessProcess.Entities.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BillingPeriodInfoManager.cs" />
@@ -123,6 +131,10 @@
     <ProjectReference Include="..\Vanrise.GenericData.MainExtensions\Vanrise.GenericData.MainExtensions.csproj">
       <Project>{9fba4641-edd5-4a59-a053-ce879f31ad14}</Project>
       <Name>Vanrise.GenericData.MainExtensions</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Vanrise.Invoice.BP.Arguments\Vanrise.Invoice.BP.Arguments.csproj">
+      <Project>{73d64484-43b6-4e3a-8bd8-b30f86d45c36}</Project>
+      <Name>Vanrise.Invoice.BP.Arguments</Name>
     </ProjectReference>
     <ProjectReference Include="..\Vanrise.Invoice.Data\Vanrise.Invoice.Data.csproj">
       <Project>{3d178003-f8bb-4d06-acde-ddd1fe4c5b62}</Project>
