--- a/Vanrise/Code/Vanrise.Common.Business/Vanrise.Common.Business.csproj
+++ b/Vanrise/Code/Vanrise.Common.Business/Vanrise.Common.Business.csproj
@@ -115,6 +115,7 @@
     <Compile Include="VREventHandler\VREventHandlerInfoFilter.cs" />
     <Compile Include="VREventHandler\VREventHandlerQuery.cs" />
     <Compile Include="VREventHandler\VREventManager.cs" />
+    <Compile Include="VRExclusiveSession\VRExclusiveSessionManager.cs" />
     <Compile Include="VRMail\VRMailManager.cs" />
     <Compile Include="VRMail\VRMailMessageTemplateManager.cs" />
     <Compile Include="VRMail\VRMailMessageTypeManager.cs" />
