--- a/Vanrise/Code/Vanrise.Common.Data/Vanrise.Common.Data.csproj
+++ b/Vanrise/Code/Vanrise.Common.Data/Vanrise.Common.Data.csproj
@@ -58,6 +58,7 @@
     <Compile Include="IStatusDefinitionDataManager.cs" />
     <Compile Include="IVRComponentTypeDataManager.cs" />
     <Compile Include="IVREventHandlerDataManager.cs" />
+    <Compile Include="IVRExclusiveSessionDataManager.cs" />
     <Compile Include="IVRLoggableEntityDataManager.cs" />
     <Compile Include="IVRObjectTrackingDataManager.cs" />
     <Compile Include="IVRRuleDataManager.cs" />
