--- a/Vanrise/Code/Vanrise.AccountManager.Data.SQL/Vanrise.AccountManager.Data.SQL.csproj
+++ b/Vanrise/Code/Vanrise.AccountManager.Data.SQL/Vanrise.AccountManager.Data.SQL.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A45E86ED-43E3-418F-AB96-0872D6E07D81}</ProjectGuid>
+    <ProjectGuid>{DC20E905-B7C3-4488-B7ED-D1B5978C5DE4}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Vanrise.AccountManager.Business</RootNamespace>
-    <AssemblyName>Vanrise.AccountManager.Business</AssemblyName>
+    <RootNamespace>Vanrise.AccountManager.Data.SQL</RootNamespace>
+    <AssemblyName>Vanrise.AccountManager.Data.SQL</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>SAK</SccProjectName>
@@ -43,8 +43,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AccountManagerAssignmentManager.cs" />
-    <Compile Include="AccountManagerBEDefinitionSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -60,9 +58,13 @@
       <Project>{1a350b7c-28ea-4824-b9a0-c60ad25f0ea9}</Project>
       <Name>Vanrise.Common</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Vanrise.GenericData.Entities\Vanrise.GenericData.Entities.csproj">
-      <Project>{4ab1e86a-c33a-4fd4-bd00-6c5b12f5f337}</Project>
-      <Name>Vanrise.GenericData.Entities</Name>
+    <ProjectReference Include="..\Vanrise.Data.SQL\Vanrise.Data.SQL.csproj">
+      <Project>{4ab70e59-2c65-4167-8d5f-897702cf161b}</Project>
+      <Name>Vanrise.Data.SQL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Vanrise.Data\Vanrise.Data.csproj">
+      <Project>{107dc891-2169-409f-9617-6d52723d05ce}</Project>
+      <Name>Vanrise.Data</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
