--- a/Vanrise/Code/Vanrise.AccountManager.Data/Vanrise.AccountManager.Data.csproj
+++ b/Vanrise/Code/Vanrise.AccountManager.Data/Vanrise.AccountManager.Data.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A45E86ED-43E3-418F-AB96-0872D6E07D81}</ProjectGuid>
+    <ProjectGuid>{E90E5DFA-095B-4A97-B16F-D751D860EB38}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Vanrise.AccountManager.Business</RootNamespace>
-    <AssemblyName>Vanrise.AccountManager.Business</AssemblyName>
+    <RootNamespace>Vanrise.AccountManager.Data</RootNamespace>
+    <AssemblyName>Vanrise.AccountManager.Data</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>SAK</SccProjectName>
@@ -43,15 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AccountManagerAssignmentManager.cs" />
-    <Compile Include="AccountManagerBEDefinitionSettings.cs" />
+    <Compile Include="AccountManagerDataManagerFactory.cs" />
+    <Compile Include="IDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Vanrise.AccountManager.Data\Vanrise.AccountManager.Data.csproj">
-      <Project>{e90e5dfa-095b-4a97-b16f-d751d860eb38}</Project>
-      <Name>Vanrise.AccountManager.Data</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Vanrise.AccountManager.Entities\Vanrise.AccountManager.Entities.csproj">
       <Project>{f6b69e54-b351-41f5-a845-5803900ba05f}</Project>
       <Name>Vanrise.AccountManager.Entities</Name>
@@ -59,10 +55,6 @@
     <ProjectReference Include="..\Vanrise.Common\Vanrise.Common.csproj">
       <Project>{1a350b7c-28ea-4824-b9a0-c60ad25f0ea9}</Project>
       <Name>Vanrise.Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Vanrise.GenericData.Entities\Vanrise.GenericData.Entities.csproj">
-      <Project>{4ab1e86a-c33a-4fd4-bd00-6c5b12f5f337}</Project>
-      <Name>Vanrise.GenericData.Entities</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
