Implementing new modifications for invoice comparison
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43906

--- a/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Web/TOne.WhS.Invoice.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Web/TOne.WhS.Invoice.Web.csproj
@@ -170,6 +170,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="WhS_Invoice\Constants\CarrierTypeEnum.js" />
+    <Content Include="WhS_Invoice\Constants\ComparisonCriteriaEnum.js" />
     <Content Include="WhS_Invoice\Constants\ComparisonResultEnum.js" />
     <Content Include="WhS_Invoice\Constants\InvoiceTypeEnum.js" />
     <Content Include="WhS_Invoice\Constants\ModuleConfig.js" />
