--- a/TOneV2/Code/TOneV2/TOne.WhS.SupplierPriceList.Entities.MainExtensions/TOne.WhS.SupplierPriceList.MainExtensions.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.SupplierPriceList.Entities.MainExtensions/TOne.WhS.SupplierPriceList.MainExtensions.csproj
@@ -57,6 +57,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SupplierPricelistExcelFieldMapping\ImportSupplierPriceListExtendedSettings.cs" />
+    <Compile Include="SupplierPricelistExcelFieldMapping\PricelistDateFieldMapping.cs" />
     <Compile Include="SupplierPriceListSettings\BasicSupplierPriceListSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
