add (pricelist date , constant field ) as field mapping for supplier pricelist , Make fixed cell read from another sheet , some UI changes , add pricision and crop for decimal values in supplier price list
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43942

--- a/Vanrise/Code/Vanrise.ExcelConversion.MainExtensions/Vanrise.ExcelConversion.MainExtensions.csproj
+++ b/Vanrise/Code/Vanrise.ExcelConversion.MainExtensions/Vanrise.ExcelConversion.MainExtensions.csproj
@@ -51,6 +51,7 @@
     <Compile Include="FieldMappings\CellFieldMapping.cs" />
     <Compile Include="FieldMappings\ConcatenateFieldMapping.cs" />
     <Compile Include="FieldMappings\ConditionalCellFieldMapping.cs" />
+    <Compile Include="FieldMappings\ConstantFieldMapping.cs" />
     <Compile Include="FieldMappings\FixedCellFieldMapping.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
