--- a/TOneV2/Code/TOneV2/TOne.WhS.SupplierPriceList.Web/TOne.WhS.SupplierPriceList.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.SupplierPriceList.Web/TOne.WhS.SupplierPriceList.Web.csproj
@@ -161,6 +161,7 @@
     <Content Include="WhS_SupplierPriceList\Constant\PreviewChangeTypeEnum.js" />
     <Content Include="WhS_SupplierPriceList\Constant\RateChangeTypeEnum.js" />
     <Content Include="WhS_SupplierPriceList\Constant\CodeChangeTypeEnum.js" />
+    <Content Include="WhS_SupplierPriceList\Constant\RatePrecisionTypeEnum.js" />
     <Content Include="WhS_SupplierPriceList\Constant\SPLDefintionEnum.js" />
     <Content Include="WhS_SupplierPriceList\Constant\SupplierPriceListType.js" />
     <Content Include="WhS_SupplierPriceList\Constant\ZoneServicesChangeTypeEnum.js" />
