Implementing validation for invoice comparison
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43990

--- a/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Entities/TOne.WhS.Invoice.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Entities/TOne.WhS.Invoice.Entities.csproj
@@ -55,6 +55,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CompareInvoiceOperationOutput.cs" />
     <Compile Include="OriginalInvoiceDataInput.cs" />
     <Compile Include="OriginalInvoiceDataRuntime.cs" />
     <Compile Include="SupplierGenerationCustomSectionPayload.cs" />
