Invoice generation process
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44003

--- a/Vanrise/Code/Vanrise.Invoice.BP.Activities/Vanrise.Invoice.BP.Activities.csproj
+++ b/Vanrise/Code/Vanrise.Invoice.BP.Activities/Vanrise.Invoice.BP.Activities.csproj
@@ -56,9 +56,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GeneratePartnersInvoices.cs" />
+    <Compile Include="ClearInvoiceGenerationDrafts.cs" />
+    <Compile Include="GenerateAutomaticInvoiceGenerationDrafts.cs" />
+    <Compile Include="GeneratePartnerInvoice.cs" />
     <Compile Include="LoadInvoiceGenerationDrafts.cs" />
-    <Compile Include="LoadAllPartnerIds.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
