--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.BP.Activities/TOne.WhS.Sales.BP.Activities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.BP.Activities/TOne.WhS.Sales.BP.Activities.csproj
@@ -105,6 +105,7 @@
     <Compile Include="ProcessCustomerCountries.cs" />
     <Compile Include="ReadRatePlanContext.cs" />
     <Compile Include="SavePricelistFiles.cs" />
+    <Compile Include="SetContextDataByZoneList.cs" />
     <Compile Include="SetContextEffectiveAfterCustomerZoneRatesByZone.cs" />
     <Compile Include="SetContextExistingZonesByCountry.cs" />
     <Compile Include="SetContextInheritedRatesByZoneId.cs" />
