--- a/Vanrise/Code/Vanrise.AccountManager.Entities/Vanrise.AccountManager.Entities.csproj
+++ b/Vanrise/Code/Vanrise.AccountManager.Entities/Vanrise.AccountManager.Entities.csproj
@@ -45,6 +45,8 @@
   <ItemGroup>
     <Compile Include="AccountManager.cs" />
     <Compile Include="AccountManagerAssignment.cs" />
+    <Compile Include="AccountManagerDetail.cs" />
+    <Compile Include="AccountManagerQuery.cs" />
     <Compile Include="Definition\AccountManagerAssignmentDefinition.cs" />
     <Compile Include="Definition\AccountManagerSubViewDefinition.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
